# jolt-revm

./: .gitmodules  Cargo.toml  Makefile  README.md  run.sh  rust-toolchain.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
bins/statetest-measure/: Cargo.toml  build.rs  riscv-baremetal.ld  rust-toolchain.toml
bins/statetest-measure/src/: compat.rs  lib.rs  main.rs  merkle_trie.rs  prelude.rs  riscv32im.rs  runner.rs
bins/statetest-measure/src/mocks/: instant.rs
docs/: howto-perform-statetest.md
guest/: Cargo.toml  riscv32im-unknown-none-elf.ld
guest/src/: lib.rs  main.rs  riscv32im.rs  riscv64ima.rs
guest/src/utils/: mod.rs  noop.rs  precompile_BLS12_G1ADD.rs  precompile_BLS12_G1MSM.rs  precompile_BLS12_G2ADD.rs  precompile_BLS12_G2MSM.rs  precompile_BLS12_MAP_FP2_TO_G2.rs  precompile_BLS12_MAP_FP_TO_G1.rs  precompile_BLS12_PAIRING_CHECK.rs  precompile_blake2.rs  precompile_ec_add.rs  precompile_ec_mul.rs  precompile_ec_pair.rs  precompile_ecrecover.rs  precompile_kzg_point.rs  precompile_modexp.rs  precompile_ripemd160.rs  precompile_sha256.rs  solidity_fibonacci.rs  solidity_sqrt.rs
host/: Cargo.toml
host/src/: main.rs
htif/src/: htif.rs
scripts/: bootstrap  flatten-crate.sh  setup-fixtures
