[workspace]
resolver = "2"
members = ["guest", "host"]
default-members = ["host"]

[workspace.dependencies]
# Dependencies for revm
getrandom = { version = "0.2.16", default-features = false }
secp256k1 = { version = "0.30.0", default-features = false }
revm = { version = "23.1.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
critical-section = { version = "1.2.0", default-features = false }
portable-atomic = { version = "1.11.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
const-hex = { version = "1.14.1", default-features = false }
bytes = { version = "1.10.1", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }

# Dependencies for jolt-sdk
ark-serialize = "0.5.0"
jolt-sdk = { git = "https://github.com/a16z/jolt" }

# Dependencies for revm-guest
revm-guest = { path = "./guest" }

# misc
spinners = "4.1.1"

[profile.release]
debug = 2
opt-level = 0
codegen-units = 1
lto = false

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
radium = { git = "https://github.com/ferrilab/ferrilab", package = "radium", rev = "3fdd72f3286110b1958f020b984999326190f42f" }
