[package]
name = "revm-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt-sdk = { workspace = true }
revm = { workspace = true, features = ["serde"] }
once_cell = { workspace = true, features = ["critical-section"] }
portable-atomic = { workspace = true, features = ["critical-section"] }
critical-section = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true, features = ["extra-platforms"]}

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.13.0", features = ["critical-section-single-hart"] }