[package]
name = "revm-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt-sdk = { workspace = true, features = ["guest-std"] }
revm = { workspace = true, features = ["serde"] }

[dev-dependencies]
# Enable host feature for testing provable functions on the host machine,
# as tests run in the host environment rather than RISC-V.
jolt-sdk = { workspace = true, features = ["host"] }