[package]
name = "revm-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []
no-jolt = []
noop = []
precompile_blake2 = []
precompile_BLS12_G1ADD = []
precompile_BLS12_G1MSM = []
precompile_BLS12_G2ADD = []
precompile_BLS12_G2MSM = []
precompile_BLS12_MAP_FP_TO_G1 = []
precompile_BLS12_MAP_FP_TO_G2 = []
precompile_BLS12_PAIRING_CHECK = []
precompile_ec_add = []
precompile_ec_mul = []
precompile_ec_pair = []
precompile_ecrecover = []
precompile_kzg_point = []
precompile_modexp = []
precompile_ripemd160 = []
precompile_sha256 = []
solidity_fibonacci = []
solidity_sqrt = []

[dependencies]
jolt-sdk = { workspace = true }
revm = { workspace = true, features = ["serde"] }
once_cell = { workspace = true, features = ["critical-section"] }
portable-atomic = { workspace = true, features = ["critical-section"] }
critical-section = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true, features = ["extra-platforms"]}
embedded-alloc = { version = "0.6.0", default-features = false, features = ["llff"] }
htif = { workspace = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.13.0", features = ["critical-section-single-hart"] }

[dev-dependencies]
# Enable host feature for testing provable functions on the host machine,
# as tests run in the host environment rather than RISC-V.
jolt-sdk = { workspace = true, features = ["host"] }